Additional minor fix for DOCS-140: Improve readability of long commands
Adapt CSS for case where the document includes back-to-back <screen> elements

--- a/forgerock-doc-default-branding/trunk/src/main/resources/coredoc.css
+++ b/forgerock-doc-default-branding/trunk/src/main/resources/coredoc.css
@@ -242,7 +242,8 @@ div.synopsis {
 div.flat,
 div.screen {
     border: thin dashed #ccc;
-    padding: 0.25em;
+    margin: 0.25em 0 0.25em 0;
+    padding: 0 0.25em 0 0.25em;
 }
 
 .toggle, .tocollapse, .toexpand, .bookcollapse, .bookexpand {
